deploy: 5ee191f110deb2e268f1a91cee4860e8d70c95dd

--- a/Home/rol_faq.html
+++ b/Home/rol_faq.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Home - Vinegar</title>
+        <title>2024 Roblox Block FAQ - Vinegar</title>
 
 
         <!-- Custom HTML head -->
@@ -87,7 +87,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../Home/index.html" class="active"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="../Home/rol_faq.html"><strong aria-hidden="true">2.</strong> 2024 Roblox Block FAQ</a></li><li class="chapter-item expanded "><a href="../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Installation/guides/package.html"><strong aria-hidden="true">3.1.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../Installation/guides/source.html"><strong aria-hidden="true">3.2.</strong> Installing from source</a></li></ol></li><li class="chapter-item expanded "><a href="../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../Troubleshooting/index.html"><strong aria-hidden="true">5.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Troubleshooting/winehq.html"><strong aria-hidden="true">5.1.</strong> Reporting issues to WineHQ</a></li></ol></li><li class="chapter-item expanded "><a href="../Home/faq.html"><strong aria-hidden="true">6.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="../Contributing/index.html"><strong aria-hidden="true">7.</strong> Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../Home/index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="../Home/rol_faq.html" class="active"><strong aria-hidden="true">2.</strong> 2024 Roblox Block FAQ</a></li><li class="chapter-item expanded "><a href="../Installation/index.html"><strong aria-hidden="true">3.</strong> Installation</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Installation/guides/package.html"><strong aria-hidden="true">3.1.</strong> Installing from package</a></li><li class="chapter-item expanded "><a href="../Installation/guides/source.html"><strong aria-hidden="true">3.2.</strong> Installing from source</a></li></ol></li><li class="chapter-item expanded "><a href="../Configuration/index.html"><strong aria-hidden="true">4.</strong> Configuration</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Configuration/tips-and-tricks/index.html"><strong aria-hidden="true">4.1.</strong> Tips and tricks</a></li></ol></li><li class="chapter-item expanded "><a href="../Troubleshooting/index.html"><strong aria-hidden="true">5.</strong> Troubleshooting</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Troubleshooting/winehq.html"><strong aria-hidden="true">5.1.</strong> Reporting issues to WineHQ</a></li></ol></li><li class="chapter-item expanded "><a href="../Home/faq.html"><strong aria-hidden="true">6.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="../Contributing/index.html"><strong aria-hidden="true">7.</strong> Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -146,7 +146,7 @@
                         <a href="https://github.com/vinegarhq/vinegar" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/vinegarhq/vinegarhq.github.io/edit/main/src/Home/index.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/vinegarhq/vinegarhq.github.io/edit/main/src/Home/rol_faq.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -175,31 +175,48 @@
 
                 <div id="content" class="content">
                     <main>
-                        <p align="center">
-  <img style="max-width: 30%" src="/favicon.svg">
-</p>
-<p>&lt;<div class="warning"></p>
-<p><a href="https://devforum.roblox.com/t/why-isnt-hyperion-an-anti-cheat/2840095/27?u=jrelvas">Roblox has discontinued Wine support for Roblox Player as of 22/02/2024</a>. You will no longer be able to run Roblox Player. Please do not open bug reports about it, <strong>there's nothing we can do.</strong>
-<u>Roblox Studio should continue working.</u></p>
-<p>Please see <a href="./rol_faq.html">the 2024 Roblox on Linux Block FAQ</a> for more information.</p>
-</div>
-<h2 id="welcome-to-the-documentation-of-the-vinegar-project"><a class="header" href="#welcome-to-the-documentation-of-the-vinegar-project">Welcome to the documentation of the Vinegar project!</a></h2>
-<ul>
-<li>Vinegar is a fast, minimal, and robust bootstrapper for Roblox Player and Roblox Studio that has many ease-of-use features.</li>
-<li>The software and documentation are both open source, and can be accessed <a href="https://github.com/vinegarhq">on GitHub</a>.</li>
-<li>There is no graphical configuration interface for Vinegar at this time.</li>
-<li>Vinegar is an alternative to <a href="https://brinkervii.gitlab.io/grapejuice/">Grapejuice</a>, designed for advanced Linux users.</li>
-</ul>
-<p>The Discord server for Vinegar can be found <a href="https://discord.gg/dzdzZ6Pps2">here</a>.</p>
-<hr />
-<p><em>Roblox® is a registered Roblox Corporation trademark. VinegarHQ is not affiliated with Roblox Corporation.</em></p>
+                        <h1 id="the-2024-roblox-on-linux-block-faq"><a class="header" href="#the-2024-roblox-on-linux-block-faq">The 2024 Roblox on Linux Block FAQ</a></h1>
+<h2 id="aka-the-second-great-rol-famine-as-suggested-by-jrelvas"><a class="header" href="#aka-the-second-great-rol-famine-as-suggested-by-jrelvas">Aka: The Second Great ROL Famine (as suggested by Jrelvas)</a></h2>
+<h3 id="why-did-roblox-decide-to-block-linux"><a class="header" href="#why-did-roblox-decide-to-block-linux">Why did Roblox decide to block Linux?</a></h3>
+<p>There are multiple reasons, but we’ll be discussing the main contributing factors:</p>
+<ol>
+<li>Increased cheat detection on Wine</li>
+<li>Floundering of Wine-based exploits in different Discord servers</li>
+<li>Maintainability issues
+<a href="https://devforum.roblox.com/t/why-isnt-hyperion-an-anti-cheat/2840095/33">As Bitdancer stated</a>, the 3 contributing factors above played a huge part in motivating Roblox to take this decision. There have recently been multiple instances of Wine-based exploits abusing the weakened version of Hyperion on Wine, and Roblox has an obligation to close up opportunities for malicious behavior.</li>
+</ol>
+<p><img src="./dumas.png" alt="image of a cheater" /></p>
+<h3 id="will-studio-be-affected"><a class="header" href="#will-studio-be-affected">Will Studio be affected?</a></h3>
+<p>No, Studio will continue to work. Bitdancer has confirmed that Roblox Studio will not be receiving Hyperion currently, as it’s only used for game development. Vinegar will continue to maintain Roblox Studio support. However, Roblox may sometimes include breaking changes into Studio that result in several days of downtime while Wine or RoL maintainers fix the issue. Additionally, while Roblox is not considering adding Hyperion to Studio currently, we cannot say that it will hold true in the future.</p>
+<h3 id="what-alternatives-do-we-have"><a class="header" href="#what-alternatives-do-we-have">What alternatives do we have?</a></h3>
+<p>We currently have two alternatives outside of running Windows:</p>
+<ol>
+<li>Waydroid: Waydroid can be used to run Roblox on x86 Linux systems (albeit with a performance penalty and non-free translation layer usage) to play the mobile version of Roblox Player. Please note that you will not be able to play Desktop-only games, and compatibility may vary from system to system.</li>
+<li>Virtualization: Creating a Windows virtual machine is another viable alternative, albeit with more variability. It is required that you pass through a GPU (search VFIO passthrough), enable several Hyper-V hiding features, and enable ignore-msrs. Even then, the performance and compatibility of such virtual machines have varied from user to user, and is not a perfect alternative. </li>
+</ol>
+<p>Alternatively, check out Territe’s list of free games you can play.</p>
+<h3 id="what-will-happen-to-vinegar--grapejuice"><a class="header" href="#what-will-happen-to-vinegar--grapejuice">What will happen to Vinegar / Grapejuice?</a></h3>
+<p>Grapejuice is currently in end-of-life status, and will be archived by Brinker soon. Vinegar will continue to be maintained, as Roblox Studio will remain functional (we cannot guarantee functionality, though). A warning message regarding the status of Roblox Player is slated to be implemented in the near future, in conjunction with Roblox’s own error window.</p>
+<h3 id="can-i-bypass-the-byfron-block"><a class="header" href="#can-i-bypass-the-byfron-block">Can I bypass the Byfron block?</a></h3>
+<p>There has not been a single working documented method of bypassing Byfron to date, nor does RoL plan on working on one in the future. While it is not impossible for such a bypass to surface, we discourage discussion regarding bypasses in Vinegar, as the conversations are usually vague and non-constructive. Additionally, attempts to bypass Byfron can lead to automatic bans by Roblox.</p>
+<h3 id="why-does-roblox-hate-linux"><a class="header" href="#why-does-roblox-hate-linux">Why does Roblox hate Linux?</a></h3>
+<p>Roblox absolutely does not hate Linux in any way or shape! They have been transparent and helpful with us every step of the way; they were the reason why we were able to experience Roblox on Linux after the addition of Hyperion in the first place. Roblox, as a company, has more urgent priorities with greater precedence, and therefore are not capable of supporting the Linux platform presently.</p>
+<h3 id="will-roblox-player-be-blocked-forever"><a class="header" href="#will-roblox-player-be-blocked-forever">Will Roblox Player be blocked forever?</a></h3>
+<p>At the moment, Roblox has no intention to bring back Player support on Linux, at least in the near future. However, it is not impossible for it to return; we, at VinegarHQ, will remain optimistic for one.</p>
+<h3 id="how-do-i-complain"><a class="header" href="#how-do-i-complain">How do I complain?</a></h3>
+<p>As always, civil discussion is the way forward. Contributions to constructive topics on Roblox DevForums and other standard avenues of communication is always preferable; in fact, the topic of Roblox on Linux is frequently brought up at RDC. </p>
+<h3 id="i-want-to-insert-harmful-action-here-to-get-back-at-roblox"><a class="header" href="#i-want-to-insert-harmful-action-here-to-get-back-at-roblox">I want to (insert harmful action here) to get back at Roblox!</a></h3>
+<p>We sincerely ask that you do not engage in or promote harmful activities. Demonstrating malice only hurts the reputation of Linux users and worsens the chance of a return to the platform. Moderators on Roblox, VinegarHQ, and Grapejuice will hold those who make threats accountable.</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../Home/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next prefetch" href="../Home/rol_faq.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../Installation/index.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -209,8 +226,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../Home/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next prefetch" href="../Home/rol_faq.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../Installation/index.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
