deploy: be59e0c5d2025419a7bc3281d91c233cdead5ed9

--- a/Home/rol_faq.html
+++ b/Home/rol_faq.html
@@ -176,15 +176,15 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="the-2024-roblox-on-linux-block-faq"><a class="header" href="#the-2024-roblox-on-linux-block-faq">The 2024 Roblox on Linux Block FAQ</a></h1>
-<h2 id="aka-the-second-great-rol-famine-as-suggested-by-jrelvas"><a class="header" href="#aka-the-second-great-rol-famine-as-suggested-by-jrelvas">Aka: The Second Great ROL Famine (as suggested by Jrelvas)</a></h2>
+<p>aka: The Second Great ROL Famine (as suggested by Jrelvas)</p>
 <h3 id="why-did-roblox-decide-to-block-linux"><a class="header" href="#why-did-roblox-decide-to-block-linux">Why did Roblox decide to block Linux?</a></h3>
 <p>There are multiple reasons, but we’ll be discussing the main contributing factors:</p>
 <ol>
 <li>Increased cheat detection on Wine</li>
 <li>Floundering of Wine-based exploits in different Discord servers</li>
-<li>Maintainability issues
-<a href="https://devforum.roblox.com/t/why-isnt-hyperion-an-anti-cheat/2840095/33">As Bitdancer stated</a>, the 3 contributing factors above played a huge part in motivating Roblox to take this decision. There have recently been multiple instances of Wine-based exploits abusing the weakened version of Hyperion on Wine, and Roblox has an obligation to close up opportunities for malicious behavior.</li>
+<li>Maintainability issues</li>
 </ol>
+<p><a href="https://devforum.roblox.com/t/why-isnt-hyperion-an-anti-cheat/2840095/33">As Bitdancer stated</a>, the 3 contributing factors above played a huge part in motivating Roblox to take this decision. There have recently been multiple instances of Wine-based exploits abusing the weakened version of Hyperion on Wine, and Roblox has an obligation to close up opportunities for malicious behavior.</p>
 <p><img src="./dumas.png" alt="image of a cheater" /></p>
 <h3 id="will-studio-be-affected"><a class="header" href="#will-studio-be-affected">Will Studio be affected?</a></h3>
 <p>No, Studio will continue to work. Bitdancer has confirmed that Roblox Studio will not be receiving Hyperion currently, as it’s only used for game development. Vinegar will continue to maintain Roblox Studio support. However, Roblox may sometimes include breaking changes into Studio that result in several days of downtime while Wine or RoL maintainers fix the issue. Additionally, while Roblox is not considering adding Hyperion to Studio currently, we cannot say that it will hold true in the future.</p>
