deploy: 73f3beddfde386197abae6a6afc425c20a4b9e21

--- a/Home/rol_faq.html
+++ b/Home/rol_faq.html
@@ -192,7 +192,7 @@
 <p>We currently have two alternatives outside of running Windows:</p>
 <ol>
 <li>Waydroid: Waydroid can be used to run Roblox on x86 Linux systems (albeit with a performance penalty and non-free translation layer usage) to play the mobile version of Roblox Player. Please note that you will not be able to play Desktop-only games, and compatibility may vary from system to system.</li>
-<li>Virtualization: Creating a Windows virtual machine is another viable alternative, albeit with more variability. It is required that you pass through a GPU (search VFIO passthrough), enable several Hyper-V hiding features, and enable ignore-msrs. Even then, the performance and compatibility of such virtual machines have varied from user to user, and is not a perfect alternative. </li>
+<li>Virtualization: Creating a Windows virtual machine is another viable alternative, albeit with more variability. It is required that you pass through a GPU (search VFIO passthrough), enable several Hyper-V hiding features, remove references to VFIO and splice related components, and enable ignore-msrs. Even then, the performance and compatibility of such virtual machines have varied from user to user, and is not a perfect alternative. </li>
 </ol>
 <p>Alternatively, check out Territe’s list of free games you can play.</p>
 <h3 id="what-will-happen-to-vinegar--grapejuice"><a class="header" href="#what-will-happen-to-vinegar--grapejuice">What will happen to Vinegar / Grapejuice?</a></h3>
